# Make.And.CMake.Tutorial

./: README.md
bazel/: README.md
build_bin/auto_single_target/cxx/: Makefile
build_bin/hello/c/: Makefile
build_bin/hello/cxx/: Makefile  hello.cpp
build_bin_a/hello/cxx/: CMakeLists.txt
build_bin_a/nest_lib_directory/c/: Makefile
build_bin_a/nest_lib_directory/cxx/: Makefile
build_bin_so/nest_lib_directory/c/: Makefile
build_bin_so/nest_lib_directory/cxx/: Makefile
build_exe/hello_world/c/: CMakeLists.txt  Makefile
build_exe/hello_world/cxx/: Makefile
build_exe/manual_multi_target/c/: CMakeLists.txt
build_exe/manual_multi_target/cxx/: CMakeLists.txt
cmake/: README.md
cmake/hello_world/: README.md
cmake/hello_world/cxx/: CMakeLists.txt
cmake/hello_world_list/: README.md
cmake/install_project/: README.md
cmake/install_project/cxx/: CMakeLists.txt  build_by_cmake.sh
cmake/list/: README.md
cmake/list/recipe-01/: CMakeLists.txt
cmake/list/recipe-02/: CMakeLists.txt
cmake/list/recipe-03/: CMakeLists.txt
cmake/list/recipe-04/: CMakeLists.txt
cmake/objlib/: README.md
cmake/parallel/: README.md
cmake/parallel/cxx/: CMakeLists.txt  Hello1.h
cmake/parallel_build/cxx/: Hello.cpp  Hello1.cpp  Hello2.cpp  Hello2.h  build_by_cmake.sh  main.cpp
cmake/shared_library/: README.md
cmake/shared_library/cxx/: CMakeLists.txt
cmake/static_and_shared_library/: README.md
cmake/static_and_shared_library/cxx/: CMakeLists.txt
cmake/static_and_shared_library_2/: README.md
cmake/static_and_shared_library_2/cxx/: CMakeLists.txt
cmake/static_and_shared_library_2/cxx/src/: Hello.cpp
cmake/static_library/: README.md
cmake/static_library/cxx/: CMakeLists.txt
cmake/static_library/cxx/src/: main.cpp
cmake/target_compile_definitions/: README.md
cmake/target_compile_definitions/cxx/: CMakeLists.txt
single_directory/auto_multi_target/c/: CMakeLists.txt  Makefile  Makefile2
single_directory/auto_multi_target/cxx/: CMakeLists.txt  Makefile  Makefile2
single_directory/auto_single_target/c/: Makefile  Makefile2
single_directory/auto_single_target/cxx/: CMakeLists.txt  Makefile  Makefile2
single_directory/hello/c/: CMakeLists.txt  Makefile  hello.c
single_directory/hello/cxx/: CMakeLists.txt  Makefile
single_directory/hello_world/cxx/: CMakeLists.txt
single_directory/manual_multi_target/c/: Makefile  Makefile2
single_directory/manual_multi_target/cxx/: Makefile  Makefile2
single_directory/manual_single_target/cxx/: CMakeLists.txt  Makefile  Makefile2
